@@ -1,6 +1,7 @@
 todoyu timetracking changelog
 
 timetracking 1.3.1 - not released yet
+	* Added: New filter for overbooked tasks (absolute in minutes)
 	* Bugfix: Fixed quicktask-handling (task_done flag was ignored / wrongly overwritten)
 
 timetracking 1.3.0 - 2013-03-27
